Initial avenger grammar

--- a/.gitattributes
+++ b/.gitattributes
@@ -39,3 +39,5 @@ Package.resolved linguist-generated
 # Zig bindings
 build.zig linguist-generated
 build.zig.zon linguist-generated
+# SCM syntax highlighting & preventing 3-way merges
+pixi.lock merge=binary linguist-language=YAML linguist-generated=true
